--- a/index.html
+++ b/index.html
@@ -34,55 +34,55 @@
     </style>
   </head>
   <body>
-    <!--картинки-->
+    <!--блок1-->
      <img src="images/setka.svg" alt="background" class="back">
      <img src="images/star1.svg" alt="s1" class="star1">
      <img src="images/name.svg" alt="header" class="name">
      <img src="images/r1.svg" alt="rec" class="r1">
+     <div class="strk1"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим</marquee> </div>
      <img src="images/star2.svg" alt="s1" class="star2">
-     <img src="images/star3.svg" alt="s1" class="star3">
-     <img src="images/star4.svg" alt="s1" class="star4">
+     <h1 class="text1"> 1. выберите основу </h1>
      <img src="images/bowl1.svg" alt="c1" class="bowl1">
+     <h1 class="kimchi"> kimchi </h1>
      <img src="images/bowl2.svg" alt="c1" class="bowl2">
+     <h1 class="ramen"> ramen </h1>
      <img src="images/bowl3.svg" alt="c1" class="bowl3">
+     <h1 class="miso"> miso </h1>
      <img src="images/n1.svg" alt="c1" class="n1">
+     <h1 class="soba"> soba </h1>
      <img src="images/n2.svg" alt="c1" class="n2">
+     <h1 class="somen"> somen </h1>
      <img src="images/n3.svg" alt="c1" class="n3">
+     <h1 class="udon"> udon </h1>
+     <!--блок2-->
      <img src="images/r2.svg" alt="rec" class="r2">
+     <div class="strk2"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста</marquee> </div>
+     <h1 class="text2"> 2. выберите топпинг </h1>
      <img src="images/i1.svg" alt="ingridients" class="i1">
+     <h1 class="bambu"> bambu </h1>
      <img src="images/i2.svg" alt="ingridients" class="i2">
+     <h1 class="egg"> egg </h1>
      <img src="images/i3.svg" alt="ingridients" class="i3">
+     <h1 class="fishcake"> fish cake </h1>
      <img src="images/i4.svg" alt="ingridients" class="i4">
+     <h1 class="ceboli"> ceboli </h1>
      <img src="images/i5.svg" alt="ingridients" class="i5">
+     <h1 class="corn"> corn </h1>
+     <!--блок3-->
      <img src="images/r3.svg" alt="rec" class="r3">
-     <img src="images/logo.svg" alt="podval" class="logo">
+     <div class="strk3"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь</marquee> </div>
+     <h1 class="text3"> 3. миритесь! </h1>
      <img src="images/plk1.svg" alt="plk" class="plk1">
      <img src="images/plk2.svg" alt="plk" class="plk2">
      <img src="images/lapsha.svg" alt="lapsha" class="lapsha">
+     <img src="images/star4.svg" alt="s1" class="star4">
      <img src="images/pan1.svg" alt="pan" class="pan1">
-     <img src="images/pan2.svg" alt="pan" class="pan2">
-     <img src="images/logo2.svg" alt="podval" class="logo2">
-     <!--текст-->
-     <h1 class="text1"> 1. выберите основу </h1>
-     <h1 class="kimchi"> kimchi </h1>
-     <h1 class="ramen"> ramen </h1>
-     <h1 class="miso"> miso </h1>
-     <h1 class="soba"> soba </h1>
-     <h1 class="somen"> somen </h1>
-     <h1 class="udon"> udon </h1>
-     <h1 class="text2"> 2. выберите топпинг </h1>
-     <h1 class="bambu"> bambu </h1>
-     <h1 class="egg"> egg </h1>
-     <h1 class="fishcake"> fish cake </h1>
-     <h1 class="ceboli"> ceboli </h1>
-     <h1 class="corn"> corn </h1>
-     <h1 class="text3"> 3. миритесь! </h1>
      <h1 class="ierogl1"> 条面 </h1>
+     <img src="images/pan2.svg" alt="pan" class="pan2">
      <h1 class="ierogl2"> 面条 </h1>
+     <img src="images/logo2.svg" alt="podval" class="logo2">
+     <img src="images/star3.svg" alt="s1" class="star3">
+     <img src="images/logo.svg" alt="podval" class="logo">
      <h2 class="kv"> Карпова Вероника </h2>
-     <!--div-->
-     <div class="strk1"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим</marquee> </div>
-     <div class="strk2"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста</marquee> </div>
-     <div class="strk3"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь</marquee> </div>
   </body>
 </html>
