--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>web poster</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" type="image/png" href="images/obl.svg" />
+    <meta name="viewport" content="width=device-width">
     <style media="screen">
       html {
       background-color: #F94A07;
       display: block;
-      height: 5094px;
+      height: 353.750vw;
       }
       body {
-      height: 5094px;
-      width: 1440px;
+      height: 353.750vw;
+      width: 100vw;
       position: relative;
       display: block;
       margin: 0 auto;
       background: #F94A07;
       }
-      body::before {
+      /* body::before {
       position: absolute;
       top: 0;
       left: 0;
@@ -30,7 +30,7 @@
       height: 100%;
       background: url(images/maket.png);
       opacity: 0;
-      }
+      } */
     </style>
   </head>
   <body>
@@ -39,7 +39,7 @@
      <img src="images/star1.svg" alt="s1" class="star1">
      <img src="images/name.svg" alt="header" class="name">
      <img src="images/r1.svg" alt="rec" class="r1">
-     <div class="strk1"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим</marquee> </div>
+     <div class="strk1"><marquee behavior="alternate" scrollamount="10" direction="right" style="color: #FC2D00; font-size: 5.556vw; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим давай поговорим</marquee> </div>
      <img src="images/star2.svg" alt="s1" class="star2">
      <h1 class="text1"> 1. выберите основу </h1>
      <img src="images/bowl1.svg" alt="c1" class="bowl1">
@@ -56,7 +56,7 @@
      <h1 class="udon"> udon </h1>
      <!--блок2-->
      <img src="images/r2.svg" alt="rec" class="r2">
-     <div class="strk2"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста</marquee> </div>
+     <div class="strk2"><marquee behavior="alternate" scrollamount="10" direction="right" style="color: #FC2D00; font-size: 5.556vw; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста прости меня, пожалуйста</marquee> </div>
      <h1 class="text2"> 2. выберите топпинг </h1>
      <img src="images/i1.svg" alt="ingridients" class="i1">
      <h1 class="bambu"> bambu </h1>
@@ -70,7 +70,7 @@
      <h1 class="corn"> corn </h1>
      <!--блок3-->
      <img src="images/r3.svg" alt="rec" class="r3">
-     <div class="strk3"><marquee behavior="alternate" scrollamount="20" direction="right" style="color: #FC2D00; font-size: 80px; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь</marquee> </div>
+     <div class="strk3"><marquee behavior="alternate" scrollamount="10" direction="right" style="color: #FC2D00; font-size: 5.556vw; font-weight: bold; line-height: 150%; font-family: 'Lato', sans-serif;">поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь поссорились? помиритесь</marquee> </div>
      <h1 class="text3"> 3. миритесь! </h1>
      <img src="images/plk1.svg" alt="plk" class="plk1">
      <img src="images/plk2.svg" alt="plk" class="plk2">
