--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       html {
       background-color: #F94A07;
       display: block;
-      height: 353.750vw;
       }
       body {
-      height: 353.750vw;
       width: 100vw;
+      height: 353.750vw;
       position: relative;
+      overflow-x: hidden;
       display: block;
       margin: 0 auto;
       background: #F94A07;
